# eprice

./: .cursorrules  .pre-commit-config.yaml  Cargo.toml  README.md  docker-compose.yml  eprice.js  index.html  rust-toolchain  sw.js
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml  rust.yml  typos.yml
.qoder/quests/: continue-readme-content.md  review-pending-tasks.md  unknown-file.md  upgrade-egui-to-0-32-3.md
data/: eprice.db  remembered_session.json
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: api_documentation.md  cross_platform_testing.md  deployment_guide.md
scripts/: deploy.sh  rollback.sh  test_linux.sh  test_macos.sh  test_wasm.sh  test_windows.ps1
src/: app.rs  error.rs  lib.rs  main.rs  map.rs  models.rs
src/alerts/: mod.rs  monitor.rs  notification.rs  ui.rs
src/async_ops/: executor.rs  manager.rs  mod.rs  operations.rs  progress.rs
src/auth/: auth_manager.rs  mod.rs  models.rs  session.rs  ui.rs
src/database/: connection.rs  migrations.rs  mod.rs  repository.rs
src/ocr/: image_processor.rs  mod.rs  models.rs  receipt_parser.rs  text_extractor.rs
src/scanner/: barcode_decoder.rs  camera_manager.rs  mod.rs  models.rs  product_matcher.rs  ui.rs
src/search/: engine.rs  filters.rs  mod.rs  ui.rs
src/services/: mod.rs  price_service.rs  product_service.rs  review_service.rs  store_service.rs  user_service.rs
src/settings/: config.rs  mod.rs  ui.rs
src/utils/: crypto.rs  file_utils.rs  mod.rs  notification.rs  validation.rs
src/verification/: manager.rs  mod.rs  ui.rs
tests/: database_tests.rs.bak  integration_tests.rs  models_tests.rs.bak  services_tests.rs  ui_tests.rs.bak  utils_tests.rs
